--- a/index.html
+++ b/index.html
@@ -8,3 +8,75 @@
  <script src="https://cdn.babylonjs.com/proceduralTexturesLibrary/babylonjs.proceduralTextures.min.js"></script> 
  <script src="https://cdn.babylonjs.com/serializers/babylonjs.serializers.min.js"></script>
 </html>
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+    <title>Galactic.g7</title>
+    <script src="https://code.jquery.com/pep/0.4.2/pep.min.js"></script>
+    <script src="https://preview.babylonjs.com/babylon.js"></script>
+    <script src="https://preview.babylonjs.com/loaders/babylonjs.loaders.js"></script>
+
+    <style>
+        html,
+        body {
+            overflow: hidden;
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
+        #renderCanvas {
+            width: 100%;
+            height: 100%;
+            touch-action: none;
+        }
+
+        #loadingScreen {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            color: snow;
+            font-size: 70px;
+            font-family:  cursive;
+            text-align: center;
+            background-color: #000000;
+            z-index: 9999;
+        }
+    </style>
+</head>
+
+<body>
+    
+    <canvas id="renderCanvas"></canvas>
+    <script>
+        var canvas = document.getElementById("renderCanvas");
+        var engine = new BABYLON.Engine(canvas, true);
+
+        var createScene = function () { // Create the scene space 
+            var scene = new BABYLON.Scene(engine); // Add a camera to the scene and attach it to the canvas 
+            var camera = new BABYLON.ArcRotateCamera("Camera", Math.PI / 2, Math.PI / 2, 2, new BABYLON.Vector3(0,0,5), scene); 
+            camera.attachControl(canvas, true); // Add lights to the scene 
+            var light1 = new BABYLON.HemisphericLight("light1", new BABYLON.Vector3(1, 1, 0), scene); 
+            var light2 = new BABYLON.PointLight("light2", new BABYLON.Vector3(0, 1, -1), scene); // Add and manipulate meshes in the scene 
+            var sphere = BABYLON.MeshBuilder.CreateSphere("sphere", {diameter:2}, scene); 
+            var envTexture = new BABYLON.CubeTexture("/assets/space/space", scene); 
+            scene.createDefaultSkybox(envTexture, true, 1000);
+            //scene.fogMode = BABYLON.Scene.FOGMODE_EXP;
+
+            return scene; };
+
+        var scene = createScene();
+
+        engine.runRenderLoop(function () {
+            if (scene) {
+                scene.render();
+            }
+        });
+        window.addEventListener("resize", function () {
+            engine.resize();
+        });
+    </script>
+</body>
+</html>
